src/test/deca/syntax/invalid/decl_class/test_decl_class_without_braces.deca
// Description:
//    Programme minimaliste creant une classe
//
// Resultats:
// missing '}' at '<EOF>'
// Historique:
//    cree le 01/01/2024

class A {

